Added animation to text on home screen, index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font logo-text">
+                <h1 class="display-4 logo-font logo-text animate__animated animate__fadeInLeft animate__delay-1s">
                     Premium Cocktails Delivered To You
                 </h1>
                 <div class="my-5">
@@ -24,4 +24,24 @@
             </div>
         </div>
     </div>
+    <section class="bg-about bg-white" id="about">
+    <div class="container animate__animated animate__fadeIn wow">
+        <div class="row">
+            <div class="offset-1 col-10 text-center">
+                <h1>About Us</h1>
+                <p>
+                    Flowery Days is a florist located in the heart of Dublin city. Since opening our doors in 1985, we've been dedicated to providing high quality, fresh and beautiful flowers for any occasion. <br />
+                    We have diverse lineups for our bouquets and flower collections which are freshly picked locally. <br />
+                    <br />
+                    Not only bouquets, we also provide a wide range of collections of flowers for anyone who is interested in arranging flowers as a hobby.
+                    <br />
+                    We update our blog weekly, sharing tips for gardening, flower arrangements and seasonal knowledge of flowers and plants. Please leave your comments on our blog, and we will take your feedback or requests on board for our next post!
+                    <br />
+                    <br />
+                    We are dedicated to giving flower lovers the information they need to enjoy a life surrounded by flowers and plants!
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
