Added styling and css to reviews on product detail page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,20 +25,20 @@
         </div>
     </div>
     <section class="bg-about bg-white" id="about">
-    <div class="container animate__animated animate__fadeIn wow">
+    <div class="container animate__animated animate__fadeIn">
         <div class="row">
             <div class="offset-1 col-10 text-center">
                 <h1>About Us</h1>
                 <p>
-                    Flowery Days is a florist located in the heart of Dublin city. Since opening our doors in 1985, we've been dedicated to providing high quality, fresh and beautiful flowers for any occasion. <br />
-                    We have diverse lineups for our bouquets and flower collections which are freshly picked locally. <br />
+                    Speakeasy Cocktails is a home delivery service for premium cocktails and personal bar equipment. <br />
                     <br />
-                    Not only bouquets, we also provide a wide range of collections of flowers for anyone who is interested in arranging flowers as a hobby.
-                    <br />
-                    We update our blog weekly, sharing tips for gardening, flower arrangements and seasonal knowledge of flowers and plants. Please leave your comments on our blog, and we will take your feedback or requests on board for our next post!
+                    We provide a wide range of alcoholic and non alcoholic beverages, pre-prepared and ready to drink, all you need to do is add ice to your favourite glass and enjoy.
                     <br />
                     <br />
-                    We are dedicated to giving flower lovers the information they need to enjoy a life surrounded by flowers and plants!
+                    We deliver nationwide in Ireland. Delivery is free for all orders over €30 and charged at 10% of your order below €30.
+                    <br />
+                    <br />
+                    Please feel free to contact us on the form below if you have any questions as we would be delighted to hear from you.
                 </p>
             </div>
         </div>
