--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,6 +5,13 @@
                 Home
             </a>
         </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item d-block d-md-none">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'wishlist' %}" id="wishlist-link">
+                Wishlist
+            </a>
+        </li>
+        {% endif %}
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
