Completed code for Wishlist and added styling

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -369,3 +369,7 @@ input[name='q']::placeholder {
 .card-header-review-extension {
     background-color: white !important;
 }
+
+.wishlist-info {
+    margin-top: 50px;
+}
