--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,6 +29,33 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
+{% if user.is_authenticated %}
+                        <!--Check if product is on user wishlist and alter button functionality-->
+                        <div class="input-field center-align">
+                            {% if on_wishlist %}
+                            <form class="form" method="POST" action="{% url 'remove_from_wishlist' product.id %}">
+                                {% csrf_token %}
+                                <button class="btn btn-outline-black rounded-0 mt-5 qty-submit block"
+                                    id="remove-wishlist-btn" type="submit" name="action">
+                                    <i class="fas fa-heart"></i> Remove from Wishlist
+                                </button>
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            </form>
+                            {% else %}
+                            <form class="form" method="POST" action="{% url 'add_to_wishlist' product.id %}">
+                                {% csrf_token %}
+                                <button class="btn btn-outline-black rounded-0 mt-5 qty-submit block qty-submit block"
+                                    id="add-wishlist-btn" type="submit" name="action">
+                                    <i class="far fa-heart"></i> Add to Wishlist
+                                </button>
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            </form>
+                            {% endif %}
+			</div>
+    {% else %}
+        <p class="small"><a href="{% url 'account_login' %}">Login</a> or <a href="{% url 'account_signup' %}">register</a> to add {{ product.name }} to your wishlist</p>
+{% endif %}
+
                     <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
@@ -92,7 +119,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                                
                             <div class="col{% if s %}-12 mt-2{% endif %}">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
