--- a/templates/base.html
+++ b/templates/base.html
@@ -159,6 +159,20 @@
     {% block content %}
     {% endblock %}
 
+	<footer class="footer mt-auto py-1 bg-about bg-white">
+		<div class="container-fluid p-1 py-3">
+			<div class="col-auto col-sm d-flex justify-content-center">
+				<div class="mt-3 mt-sm-0">
+					<ul class="list-inline list-unstyled mx-auto mb-2 mb-md-0 fs-4">
+						<li class="list-inline-item"><a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
