Completed footer styling and tested contact page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,6 +23,10 @@ body {
     text-transform: uppercase;
 }
 
+.logo-text {
+    color: rgba(87, 202, 255, 1);
+}
+
 .main-logo-link {
     width: fit-content;
 }
@@ -66,7 +70,7 @@ body {
 }
 
 .logo-text {
-    color: #dc3545;
+    color: rgba(87, 202, 255, 1)
 }
 
 .border-black {
@@ -372,4 +376,61 @@ input[name='q']::placeholder {
 
 .wishlist-info {
     margin-top: 50px;
+}
+
+/* -------------/* Footer */------------------ */
+
+footer {
+    flex: 0;
+}
+
+
+.footer-item {
+  padding-top: 50px;
+  overflow: hidden;
+}
+
+.footer-item-weather {
+  padding-top: 5px;
+}
+
+.social {
+  font-size: 32px;
+}
+
+.social i {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  font-size: 40px;
+  text-align: center;
+  color: #ffffff;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.social li a i:hover {
+  color: rgba(0, 136, 122, 1);
+}
+
+.contact {
+padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  font-size: 40px;
+  text-align: center;
+  color: #ffffff;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.contact:hover{
+    color: rgba(0, 136, 122, 1);
+    text-decoration: none;
+}
+
+.container-wrapper-blue {
+  background-color: rgba(87, 202, 255, 1);
 }
