--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,9 @@
                     {% if user.is_authenticated %}
                     <!--User Wishlist-->
                     <li class="list-inline-item">
-                        <div class="center-align">
+                        <div class="text-black nav-link text-center">
                             <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i></a>
+                            <p class="my-0">My Wishlist</p>
                         </div>
                     </li>
                     {% endif %}
@@ -159,26 +160,69 @@
     {% block content %}
     {% endblock %}
 
-	<footer class="footer mt-auto py-1 bg-about bg-white">
-		<div class="container-fluid p-1 py-3">
-			<div class="col-auto col-sm d-flex justify-content-center">
-				<div class="mt-3 mt-sm-0">
-					<ul class="list-inline list-unstyled mx-auto mb-2 mb-md-0 fs-4">
-						<li class="list-inline-item"><a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</footer>
+<footer class="container-fluid container-wrapper-blue">
+    <div class="row text-center">
+        <div class="col-sm-4 footer-item">
+            <h2>
+                <a href="{% url 'contact_us' %}" class="contact"><i class="far fa-address-card" aria-hidden="true"></i> Contact Us</a>
+            </h2>
+            <ul class="list-unstyled">
+                <li><i class="fas fa-map-marker-alt"></i> Speakeasy Cocktails</li>
+                <li>Midleton</li>
+                <li>Co. Cork</li>
+                <li>Ireland</li>
+                <li></li>
+                <li>
+                    <i class="fas fa-phone-alt"></i>
+                    <a href="tel: 021 -2578000" class="footer-contact">021 -2578000</a>
+                </li>
+            </ul>
+        </div>
+        <!------------------------------Shop Now------------------------------>
+        <div class="col-sm-4 text-center">
+
+        </div>
+        <div class="col-sm-4 footer-item">
+            <h2>
+                <i class="fas fa-hashtag" aria-hidden="true"></i> Connect With Us
+            </h2>
+            <div class="social-links">
+                <ul class="list-unstyled social">
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.twitter.com" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com" target="_blank">
+                            <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
     {% endblock %}
-
 
 </body>
 
