--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
 </head>
 
 <body>
+    <div class="content">
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
@@ -159,6 +160,7 @@
 
     {% block content %}
     {% endblock %}
+    </div>
 
 <footer class="container-fluid container-wrapper-blue">
     <div class="row text-center">
