Updated styling of wishlist icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,8 +76,8 @@
                     <!--User Wishlist-->
                     <li class="list-inline-item">
                         <div class="text-black nav-link text-center">
-                            <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i></a>
-                            <p class="my-0">My Wishlist</p>
+                            <a href="{% url 'wishlist' %}" class="wishlist-icon"><i class="fas fa-heart"></i>
+                            <p class="my-0">My Wishlist</p></a>
                         </div>
                     </li>
                     {% endif %}
