--- a/static/css/base.css
+++ b/static/css/base.css
@@ -441,3 +441,13 @@ padding-left: 10px;
 .footer {
   height: 50px;
 }
+
+.wishlist-icon {
+    color: black;
+    text-decoration: none;
+}
+
+.wishlist-icon:hover {
+    color: black;
+    text-decoration: none;
+}
