Made styling changes to homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font logo-text animate__animated animate__fadeInLeft animate__delay-1s">
+                <h1 class="display-4 logo-font main-text logo-text animate__animated animate__fadeInLeft animate__delay-1s">
                     Premium Cocktails Delivered To You
                 </h1>
                 <div class="my-5">
