--- a/static/css/base.css
+++ b/static/css/base.css
@@ -451,3 +451,8 @@ padding-left: 10px;
     color: black;
     text-decoration: none;
 }
+
+.main-text {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
