--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,9 +24,9 @@
             </div>
         </div>
     </div>
-    <section class="bg-about bg-white" id="about">
-    <div class="container animate__animated animate__fadeIn">
-        <div class="row">
+    <section class="bg-about bg-white about-us" id="about">
+    <div class="container animate__animated animate__fadeIn animate__delay-1s">
+        <div class="row ">
             <div class="offset-1 col-10 text-center">
                 <h1>About Us</h1>
                 <p>
