--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,6 +32,7 @@
                 <a href="{% url 'products' %}?category=vodka" class="dropdown-item">Vodka</a>
                 <a href="{% url 'products' %}?category=gin" class="dropdown-item">Gin</a>
                 <a href="{% url 'products' %}?category=rum" class="dropdown-item">Rum</a>
+                <a href="{% url 'products' %}?category=whiskey" class="dropdown-item">Whiskey</a>
                 <a href="{% url 'products' %}?category=vodka,gin,rum" class="dropdown-item">All Cocktails</a>
             </div>
         </li>
